# FlutterChatGptRelayServer

./: .gitignore  Cargo.toml  docker-compose.yaml  readme.md
Docker/: ws_server.dockerfile
ws_server/: Cargo.toml  promts.csv
ws_server/src/: lib.rs  main.rs  models.rs
ws_server/src/routes/: mod.rs  ws_handler.rs
