[package]
name = "ws_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["ws", "headers"] }
chatgpt_rs = { version = "1.1.8", features = ["streams"] }
chrono = "0.4.26"
dotenvy = "0.15.7"
futures-util = "0.3.28"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
tokio-tungstenite = "0.19.0"
csv= "1.1.6"
lazy_static = "1.4.0"

